# libdataflow

./: .travis.yml  AUTHORS  COPYING  ChangeLog  LICENSE  README.md  configure.ac
src/: AbstractTask.hpp  BlockingQueue.hpp  DataflowTypes.hpp  DefaultPipeline.cpp  DefaultPipeline.hpp  DefaultPipelineBuilder.cpp  DefaultPipelineBuilder.hpp  Lockable.hpp  Makefile.am  ManagedPipelineInterface.hpp  MirroredValue.hpp  Pipeline.cpp  Pipeline.hpp  PipelineBuilderInterface.hpp  PipelineInterface.hpp  PipelineManager.cpp  PipelineManager.hpp  PipelineManagerInterface.hpp  PipelineNotification.hpp  Task.cpp  Task.hpp  main.cpp
